Mon Oct 29 17:49:21 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* ace/TP_Reactor.cpp: Added some error checks at places where
	  token where acquired. 

Mon Oct 29 16:59:58 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* ace/TP_Reactor.cpp (acquire_token): The acquire_token () called
	  acquire with a sleep hook. It was wrong. It should just unblock
	  the thread by sending notify. A bad cut and paste error
	  :(. Thanks to Graeme Clark <gclark@opentext.com> for reporting
	  this. This closes [BUGID 1077].

Sun Oct 28 20:36:56 2001  Ossama Othman  <ossama@uci.edu>

	* ace/Map_T.i (clone):

	  Fixed syntax errors.

	* ace/Svc_Handler.cpp (new):

	  Reverted Michael's change.  It incorrectly altered the semantics
	  of the new operator, particularly when compiling with native
	  exception support enabled.  Fixes a warning.

Sun Oct 28 16:44:20 2001  Ossama Othman  <ossama@uci.edu>

	* ace/Timer_Hash_T.cpp (ACE_Timer_Hash_T):

	  Corrected syntax error that was introduced in the changes
	  described below by removing extraneous trailing bracket.

Sun Oct 28 13:15:00 2001  Michael Kircher <Michael.Kircher@mchp.siemens.de>

	* ace/ACE.i:
	* ace/Activation_Queue.cpp:
	* ace/Bound_Ptr.i:
	* ace/Configuration.cpp:
	* ace/Configuration_Import_Export.cpp:
	* ace/Containers_T.cpp:
	* ace/Future.cpp:
	* ace/Handle_Gobbler.h:
	* ace/Local_Tokens.i:
	* ace/MEM_SAP.i:
	* ace/Map_T.i:
	* ace/Message_Block.cpp:
	* ace/OS_Errno.cpp:
	* ace/Object_Manager.cpp:
	* ace/Obstack_T.cpp:
	* ace/Refcounted_Auto_Ptr.i:
	* ace/Remote_Tokens.i:
	* ace/Strategies_T.cpp:
	* ace/Stream.cpp:
	* ace/Svc_Handler.cpp:
	* ace/Synch_T.cpp:
	* ace/TLI.cpp:
	* ace/Timer_Hash_T.cpp:
	* ace/Timer_Queue_T.cpp:
	* ace/Unbounded_Queue.cpp:
	* ace/Unbounded_Set.cpp:

	  Changed almost all direct usages of operator new in ACE to use
	  ACE_NEW_RETURN (Exceptions is Dump_T.h).  In one case in
	  Stream.cpp the semantics changed slightly if  operator new would